welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:5: error: reassignment to val
	return answerCell=true;
                         ^answerCell:3: error: type mismatch;
 found   : Unit
 required: Boolean
if (isMom == true)
^